# hdx-python-api

./: .buildinfo  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  MANIFEST.in.bak  README.md  README.rst  genindex.html  hatch.toml  index.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  search.html  searchindex.js  setup.cfg  setup.py  test-requirements.txt
.config/: coveragerc  pre-commit-config.yaml  pytest.ini  ruff.toml
.doctrees/: environment.pickle  index.doctree
.doctrees/source/: hdx.data.doctree  hdx.doctree  hdx.facades.doctree  hdx.utilities.doctree  modules.doctree
.github/workflows/: publish.yaml  publish.yml  run-python-tests.yaml  run-python-tests.yml
_sources/: index.txt
_sources/source/: hdx.data.txt  hdx.facades.txt  hdx.txt  hdx.utilities.txt  modules.txt
config/: hdx_configuration.yml
doc/: main.md
docs/: .readthedocs-custom-steps.yml  .readthedocs-requirements.txt  main.md
documentation/: .readthedocs.yaml  Makefile  conf.py  index.md  index.rst  main.md  mkdocs.yaml  pydoc-markdown.yaml  sphinx-apidoc.sh
documentation/config/: smtp_configuration.yml
hdx/: __init__.py  configuration.py  hdx_configuration.yml  hdx_datasource_topline.yml  hdx_logging.py  logging.py  logging_configuration.yml
hdx/collector/: scraperwiki.py  simple.py
hdx/data/: dataset.py  galleryitem.py  hdxobject.py  resource.py
hdx/facades/: hdx_scraperwiki.py  scraperwiki.py  simple.py
hdx/utilities/: dictandlist.py  dictionary.py  downloader.py  json.py  loader.py  location.py  path.py
source/: hdx.data.html  hdx.facades.html  hdx.html  hdx.utilities.html  modules.html
src/hdx/: __init__.py  configuration.py  github_helper.py  hdx_approvedtags.py  hdx_base_configuration.yml  hdx_configuration.py  hdx_configuration.yml  hdx_locations.py  hdx_tagscleanup.py  logging_smtp_configuration.yml  version.py  version.txt
src/hdx/api/: __init__.py  configuration.py  hdx_base_configuration.yaml  hdx_base_configuration.yml  locations.py  remotehdx.py
src/hdx/data/: __init__.py  dataset.py  dataset_title_helper.py  date_helper.py  filestore_helper.py  galleryitem.py  hdx_datasource_topline.yaml  hdxobject.py  indicator_resource_view_template.yaml  indicator_resource_view_template.yml  organization.py  resource.py  resource_matcher.py  resource_view.py  showcase.py  showcaseitem.py  user.py  vocabulary.py
src/hdx/facades/: __init__.py  hdx_scraperwiki.py  infer_arguments.py  keyword_arguments.py  simple.py
src/hdx/utilities/: __init__.py  dictandlist.py  downloader.py  email.py  loader.py  location.py  path.py  session.py  text.py  uuid.py
tests/fixtures/: Accepted_Tags.csv  HDX_Tags_Cleaning.csv  Tag_Mapping.csv  Tag_Mapping_ChainRuleError.csv  all_results.yml  dataset_all_results.yml  dataset_search_results.yml  organization_show_results.yaml  organization_show_results.yml  resource_formats.json  search_results.yml  showcase_all_search_results.yml  test_data.csv
tests/fixtures/CKAN/: hdx_dataset_static.yaml
tests/fixtures/config/: collector_configuration.json  collector_configuration.yml  hdx_base_config.json  hdx_base_config.yaml  hdx_base_config.yml  hdx_config.json  hdx_config.yml  hdx_dataset_static.json  hdx_dataset_static.yml  hdx_datasource_topline.json  hdx_datasource_topline.yaml  hdx_email_configuration.json  hdx_email_configuration.yml  hdx_galleryitem_static.json  hdx_galleryitem_static.yml  hdx_missing_site_config.json  hdx_organization_static.json  hdx_organization_static.yml  hdx_resource_static.json  hdx_resource_static.yaml  hdx_resource_static.yml  hdx_resource_view_static.json  hdx_resource_view_static.yaml  hdx_resource_view_static.yml  hdx_showcase_static.json  hdx_showcase_static.yml  hdx_showcaseitem_static.json  hdx_showcaseitem_static.yml  hdx_user_static.json  hdx_user_static.yml  hdx_vocabulary_static.json  hdx_vocabulary_static.yaml  logging_config.json  logging_config.yml  project_configuration.json  project_configuration.yaml  project_configuration.yml  smtp_config.json  smtp_config.yml  user_agent_config.yaml  (+7 more)
tests/fixtures/datastore/: ACLED-All-Africa-File_20170101-to-20170708.xlsx
tests/fixtures/download_gen_resource/: min_qc_conflict_data_alg.csv
tests/fixtures/downloader/: basicauth.txt  extra_params.json  extra_params.yml  test_csv_processing.csv
tests/fixtures/gen_resource/: conflict_data_alg.csv  min_qc_conflict_data_alg.csv  qc_conflict_data_alg.csv  test_data_no_data.csv  test_data_no_years.csv
tests/fixtures/qc_from_rows/: qc_conflict_data_alg.csv
tests/fixtures/state/: analysis_dates.txt
tests/fixtures/update_dataset_resources/: dem_data_zwe.csv  dem_indicatorlist_zwe.csv  expected_resources_to_update.json  opri_data_zwe.csv  opri_indicatorlist_zwe.csv  opri_metadata_zwe.csv  qc_sdg_data_zwe.csv  sdg_data_zwe.csv  sdg_indicatorlist_zwe.csv  sdg_metadata_zwe.csv  unesco_dataset.json  unesco_update_dataset.json
tests/fixtures/update_logic/: update_logic_resources.yml  update_logic_resources_new.yaml  update_logic_resources_new.yml
tests/hdx/: __init__.py  conftest.py  test_configuration.py  test_hdx_approvedtags.py  test_hdx_configuration.py  test_hdx_locations.py  test_hdx_logging.py  test_logging.py
tests/hdx/api/: test_ckan.py  test_configuration.py  test_locations.py
tests/hdx/collector/: __init__.py  test_scraperwiki.py  test_simple.py
tests/hdx/data/: __init__.py  test_dataset.py  test_dataset_add_hapi_error.py  test_dataset_core.py  test_dataset_noncore.py  test_dataset_resource_generation.py  test_dataset_title_helper.py  test_filestore_helper.py  test_galleryitem.py  test_github_helper.py  test_organization.py  test_resource.py  test_resource_view.py  test_showcase.py  test_showcaseitem.py  test_update_dataset_resources.py  test_update_logic.py  test_user.py  test_vocabulary.py
tests/hdx/facades/: __init__.py  test_infer_arguments.py  test_keyword_arguments.py  test_scraperwiki.py  test_simple.py
workingexample/: my_code.py  my_resource.xlsx  run.py
(+25 files in other folders)
