#########################
# Project Configuration #
#########################

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "hdx-python-api"
description = "HDX Python API for interacting with the Humanitarian Data Exchange"
authors = [{name = "Michael Rans"}]
license = {text = "MIT"}
keywords = ["HDX", "API", "CKAN", "humanitarian data exchange"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]
requires-python = ">=3.8"

dependencies = [
    "ckanapi>=4.8",
    "defopt>=7.0.0",
    "email_validator",
    "hdx-python-country>=3.9.4",
    "hdx-python-utilities>=3.8.7",
    "libhxl>=5.2.2",
    "makefun",
    "quantulum3",
    "requests",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/OCHA-DAP/hdx-python-api"

[project.optional-dependencies]
test = ["gspread", "pytest", "pytest-check", "pytest-cov"]
dev = ["pre-commit"]
docs = ["mkapi"]
