[metadata]
name = hdx-python-api
description = HDX Python API for interacting with the Humanitarian Data Exchange
author = Michael Rans
license = MIT
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
keywords = HDX, API, library, CKAN
url = https://github.com/OCHA-DAP/hdx-python-api
platforms = any

classifiers =
    Development Status :: 5 - Production/Stable
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows

[options]
zip_safe = True
packages = find_namespace:
include_package_data = True
package_dir =
    =src

python_requires = >=3.6

setup_requires =
    pytest-runner

install_requires =
    ckanapi >= 4.6
    hdx-python-country>=3.0.2
    ndg-httpsclient
    pyasn1
    pyOpenSSL
    quantulum3

tests_require =
    pytest
    pytest-cov
    pytest-pythonpath
    logging_tree

[options.packages.find]
where = src

[bdist_wheel]
universal = 1

[aliases]
test = pytest
